objects/CN_Ship_to_Party__c.object
<CustomObject>
    <fields>
        <fullName>CN_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Name(CN)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship to Parties (Account Name)</relationshipLabel>
        <relationshipName>Ship_to_Parties2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Account_Status__c</fullName>
        <formula>TEXT(CN_Sold_To_Party_Customer__r.CN_Account_Status__c)</formula>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Account_Sync_Status__c</fullName>
        <formula>TEXT( CN_Sold_To_Party_Customer__r.CN_Sync_Status__c )</formula>
        <label>Account Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>CN_Change_Request__c</referenceTo>
        <relationshipLabel>Ship to Parties</relationshipLabel>
        <relationshipName>Ship_to_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_City_CN_API__c</fullName>
        <formula>CN_City_CN__r.CN_City_CN__c</formula>
        <label>CN_City_CN_API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_City_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City(CN)</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>CN_City__c.CN_Province__c</field>
                <operation>equals</operation>
                <valueField>$Source.CN_Province_CN__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.CN_Is_Integration_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CN_City__c</referenceTo>
        <relationshipLabel>Ship to Parties</relationshipLabel>
        <relationshipName>Ship_to_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_City_EN__c</fullName>
        <formula>CN_City_CN__r.CN_City_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City(EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Country__c</fullName>
        <defaultValue>&quot;CN&quot;</defaultValue>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name_EN__c</fullName>
        <label>Ship To Name(EN)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Name__c</fullName>
        <inlineHelpText>Please input license name + store name.</inlineHelpText>
        <label>Ship To Name(CN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>0001-Sold to party</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <default>true</default>
                    <label>0002-Goods Receipt</label>
                </value>
                <value>
                    <fullName>CPDA</fullName>
                    <label>CPDA-Onetime Customer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Delivery_Address_CN__c</fullName>
        <label>Delivery Address(CN)</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Delivery_Address_EN__c</fullName>
        <label>Delivery Address (EN)</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Delivery_Plant__c</fullName>
        <label>Delivery Plant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P011</fullName>
                    <label>P011-SINODIS ShangHai External-西诺迪斯（上海） 外部</label>
                </value>
                <value>
                    <fullName>P020</fullName>
                    <label>P020-SINODIS BeiJing-西诺迪斯（北京）</label>
                </value>
                <value>
                    <fullName>P040</fullName>
                    <label>P040-SINODIS GuangZhou-西诺迪斯（广州）</label>
                </value>
                <value>
                    <fullName>P050</fullName>
                    <label>P050-SINODIS Chengdu-西诺迪斯（成都）</label>
                </value>
                <value>
                    <fullName>P060</fullName>
                    <label>P060-SINODIS Dalian-西诺迪斯（大连）</label>
                </value>
                <value>
                    <fullName>P010</fullName>
                    <isActive>false</isActive>
                    <label>P010-SINODIS ShangHai-西诺迪斯（上海）</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Indirect_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indirect Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship to Parties (Indirect Account)</relationshipLabel>
        <relationshipName>Ship_to_Parties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Invoice_Info_Same_As_Sold_To_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice info Same as Sold-to Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Is_Indirect_Account__c</fullName>
        <formula>CN_Sold_To_Party_Customer__r.CN_Is_Indirect_Acount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Indirect Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Error_Message__c</fullName>
        <label>Latest Change Request Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Status__c</fullName>
        <label>Latest Change Request Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>No Need To Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Latest_CR_Sync_Time__c</fullName>
        <label>Latest Change Request Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Max_Partial_Delivery__c</fullName>
        <defaultValue>&quot;9&quot;</defaultValue>
        <label>Max Partial Delivery</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Mobile_Phone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Order_Combination__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Combination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Post_Code__c</fullName>
        <formula>CN_Sold_To_Party_Customer__r.CN_Post_Code__c</formula>
        <label>Post Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Province_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Province(CN)</label>
        <referenceTo>CN_Province__c</referenceTo>
        <relationshipLabel>Ship to Parties (Province(CN))</relationshipLabel>
        <relationshipName>Ship_to_Parties1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CN_Province_EN_UI__c</fullName>
        <formula>CN_Province_CN__r.CN_Province_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Province(EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Province_EN__c</fullName>
        <formula>CN_Province_CN__r.Province_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Province(EN) API</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Region__c</fullName>
        <formula>CN_Province_EN__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Search_Term_EN__c</fullName>
        <formula>CN_Sold_To_Party_Customer__r.CN_License_Name_EN__c</formula>
        <label>Search Term(EN)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Search_Term__c</fullName>
        <formula>CN_Sold_To_Party_Customer__r.Name</formula>
        <label>Search Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Shipping_Condition__c</fullName>
        <defaultValue>&quot;01&quot;</defaultValue>
        <label>Shipping Condition</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sold_To_Party_Customer_Code__c</fullName>
        <formula>CN_Sold_To_Party_Customer__r.CN_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold-to Party Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sold_To_Party_Customer__c</fullName>
        <label>Sold-to Party Customer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (4 AND 5 AND 6) OR 7</booleanFilter>
            <errorMessage>You can only select Account whose Status is New.</errorMessage>
            <filterItems>
                <field>Account.CN_Account_Status__c</field>
                <operation>equals</operation>
                <value>New</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship to Party</value>
            </filterItems>
            <filterItems>
                <field>$Source.CN_Change_Request__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.CN_Change_Request__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship to Party</value>
            </filterItems>
            <filterItems>
                <field>Account.CN_Account_Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>$User.CN_Is_Integration_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship to Parties</relationshipLabel>
        <relationshipName>Ship_to_Parties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CN_Street__c</fullName>
        <label>Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Error_Message__c</fullName>
        <label>Sync Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CN_Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_Sync_Time__c</fullName>
        <label>Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CN_Tax_Classification__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Tax Classification</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Telephone__c</fullName>
        <inlineHelpText>Please enter the number in the format of 1XXXXXXXXXX or XXX-XXXXXXXX or XXXX-XXXXXXXX-XXX (X is number).</inlineHelpText>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CN_Transportation_Zone__c</fullName>
        <label>Transportation Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0000000001</fullName>
                    <default>true</default>
                    <label>CN-0000000001-Normal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CN_UP_Code__c</fullName>
        <externalId>true</externalId>
        <label>UP code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CN_Uploading_Points__c</fullName>
        <formula>CN_Delivery_Address_CN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uploading Points</label>
        <type>Text</type>
    </fields>
    <label>Ship to Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CN_Sold_To_Party_Customer_Code__c</columns>
        <columns>CN_Sold_To_Party_Customer__c</columns>
        <columns>CN_UP_Code__c</columns>
        <columns>CN_Customer_Name__c</columns>
        <columns>CN_Province_CN__c</columns>
        <columns>CN_City_CN__c</columns>
        <columns>CN_Delivery_Address_CN__c</columns>
        <columns>CN_Delivery_Plant__c</columns>
        <columns>CN_Account_Status__c</columns>
        <columns>CN_Sync_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Ship to Party Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ship to Parties</pluralLabel>
    <recordTypes>
        <fullName>CN_Ship_to_Party</fullName>
        <active>true</active>
        <label>Ship to Party</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CN_Check_Account_NotNull</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Ship_to_Party&apos;,
  ISBLANK(CN_Sold_To_Party_Customer__c) 
)</errorConditionFormula>
        <errorDisplayField>CN_Sold_To_Party_Customer__c</errorDisplayField>
        <errorMessage>Ship-to must have an associated account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_ContactName</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  RecordType.DeveloperName = &apos;CN_Ship_to_Party&apos;,
  OR(
    AND(  ISCHANGED(CN_Contact_Name__c ),LEN( CN_Contact_Name__c ) &lt; 2),
    AND(  ISNEW() , NOT(ISBLANK(CN_Contact_Name__c )), LEN( CN_Contact_Name__c ) &lt; 2)
  )
)</errorConditionFormula>
        <errorDisplayField>CN_Contact_Name__c</errorDisplayField>
        <errorMessage>Contact Name must be entered more than two words.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Moblie_NumberFormat</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(ISBLANK( CN_Mobile_Phone__c )),
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(OR(REGEX(CN_Mobile_Phone__c , &apos;1\\d{10}&apos;),REGEX(CN_Mobile_Phone__c ,&apos;\\d{3,4}-\\d{8}(-\\d{2,5})?&apos;)))
)</errorConditionFormula>
        <errorDisplayField>CN_Mobile_Phone__c</errorDisplayField>
        <errorMessage>Please input a phone number with a valid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Check_Telephone_NumberFormat</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(ISBLANK( CN_Telephone__c )),
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(OR(REGEX(CN_Telephone__c , &apos;1\\d{10}&apos;),REGEX(CN_Telephone__c ,&apos;\\d{3,4}-\\d{8}(-\\d{2,5})?&apos;)))
)</errorConditionFormula>
        <errorDisplayField>CN_Telephone__c</errorDisplayField>
        <errorMessage>Please input a phone number with a valid format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_CreateOrEdit</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  NOT(ISPICKVAL( CN_Sold_To_Party_Customer__r.CN_Account_Status__c  ,&quot;New&quot;)),
  NOT(AND( ISNEW() ,  NOT(ISBLANK(CN_Change_Request__c)))),
  NOT(ISCHANGED(CN_Change_Request__c)),
  NOT(ISCHANGED( CN_Sync_Status__c )),
  NOT(ISCHANGED(  CN_Latest_CR_Sync_Status__c ))
)</errorConditionFormula>
        <errorMessage>Please create ship-to via creating a new ship-to change request.
Please edit existing ship-to via creating a update ship-to change request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CN_Prevent_Edit_Synced_Success</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  BEGINS(RecordType.DeveloperName, &quot;CN&quot;),
  ISCHANGED(CN_Sync_Status__c),
  ISPICKVAL(PRIORVALUE(CN_Sync_Status__c) , &quot;Success&quot;) 
)</errorConditionFormula>
        <errorMessage>E-099 : Pls don&apos;t update sync information when the ship to party has been synchronized.</errorMessage>
    </validationRules>
</CustomObject>